# Cyber-Physcial-Systems

./: .clang-format  .gitignore  MODELS.md  README.md  SETUP.md  platformio.ini  sdkconfig
.github/workflows/: compile.yaml
esp-idf (old)/: .gitignore  CMakeLists.txt
esp-idf (old)/main/: .clang-format  main.c
esp-idf (old)/main/include/: gpio.h  registers.h  template.h
esp-idf (old)/main/src/: database.c  scheduler.c  systick.c  template.c  wifi.c
include/: cars.h  global_def.h  gpio.h  pcnt.h  template.h  timer.h  traffic_cycle.h  traffic_lights.h  wifi.h
load-testing/: Cargo.toml
load-testing/src/: main.rs
main/: CMakeLists.txt  main.c  template.c
main/include/: database.h  global_def.h  interrupts.h  registers.h  scheduler.h  systick.h  timers.h  uart.h  wifi.h
main/migrations/: traffic_light.sql
main/src/: gpio.c  interrupts.c  systick.c  timers.c  uart.c
src/: cars.cpp  gpio.cpp  main.cpp  pcnt.cpp  timer.cpp  traffic_cycle.cpp  traffic_lights.cpp  wifi.cpp
web-server/: .gitignore  Cargo.toml  README.md  main.rs  openapi_spec.yaml
web-server/migrations/: 01_initial_migration.sql
web-server/src/: main.rs  main_old.rs
