[package]
name = "fabseweb"
version = "0.1.0"
edition = "2021"

[dependencies]
poem = { version = "2" }
poem-openapi = { version = "4", features = ["swagger-ui"] }
sqlx = { version = "0", features = ["runtime-tokio", "tls-rustls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = "thin"
strip = true